thinclientingressIntegration 1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reactfrontend-ingress
  namespace: thinclientgroup
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: REALTIMESERVERID
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,X-CSRFToken,Access-Control-Allow-Origin,contenttype"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - reviewclientintegration.westus.cloudapp.azure.com
      secretName: tls-secret
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thinclientapp-svc
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: reviewclient-svc
                port:
                  number: 80
          - path: /swagger
            pathType: Prefix
            backend:
              service:
                name: reviewclient-svc
                port:
                  number: 80
          - path: /trace
            pathType: Prefix
            backend:
              service:
                name: zipkin
                port:
                  number: 80
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
